--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -58,7 +58,7 @@
             android:paddingBottom="10dp"
             android:text=""
             android:textAlignment="center"
-            android:textColor="#FFF3F3"
+            android:textColor="#000000"
             android:textColorHint="#FFF3F3"
             android:textSize="30sp"
             android:visibility="invisible"
@@ -83,7 +83,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="75dp"
             android:fontFamily="casual"
-            android:textColor="#FFF3F3"
+            android:textColor="#000000"
             android:textColorHint="#FFF3F3"
             android:textSize="18sp"
             android:visibility="visible"
